# FASC-N

./: CMakeLists.txt  CTestConfig.cmake  NOTICE  README
include/: convertCharacter.h  credentialSeries.h  errorCode.h  expandFascn.h  poa.h  systemCode.h
src/: AgencyCheck.c  CMakeLists.txt  PINumber.c  PINumber.h  agencyCode.c  agencyCode.h  convertCharacter.c  credentialNumber.c  credentialNumber.h  credentialSeries.c  expandFascn.c  expandFascn.h  fascn.c  fascnOut.c  fascnParse.c  individualCredential.c  individualCredential.h  organizationalCategory.c  organizationalCategory.h  organizationalIdentifier.c  organizationalIdentifier.h  personalIdentifier.c  personalIdentifier.h  poa.c  systemCode.c  toint.c  toint.h
test/: AgencyCheck.c  CMakeLists.txt  fascn.c  fascnOut.c  fascnParse.c
